<package format="2">
  <name>noisy_odometry</name>
  <version>0.0.0</version>
  <description>Introduce noise to odometry data</description>
  <maintainer email="tanishq@domain.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
